# minimal_clang_plugin

./: .clang-format  .gitignore  CMakeLists.txt  README.md  hello.ll  hello_noinline.ll  justfile
include/plug/: colors.h  plugin.cpp
test_inputs/: hello.cpp  hello_noinline.cpp  return_cstr.cpp
